# comp442_compiler

./: .gitignore  CMakeLists.txt  README.md
src/: ast.cpp  ast.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  symbol.cpp  symbol.h  symtable.cpp  symtable.h  visitor.h
src/visitor/: codegenvisitor.h  memsizevisitor.h  semvisitor.h  symtablevisitor.h  visitor.h
test_files/: bubblesort.src  polynomial.src  polynomialerrors.src  polynomialsemanticerrors2.src  testcase.src  testcase2.src  testcase3.src
